# hails-messanger

./: .gitignore  README
messanger/: database.conf  messanger.cabal
messanger-policy/: messanger-policy.cabal
messanger-policy/Messanger/: Models.hs  Policy.hs
messanger/Messanger/: Server.hs  Views.hs
