name:                messanger-policy
version:             0.1.0.0
homepage:            https://github.com/ericstratmann/hails-messanger
author:              Eric Stratmann
maintainer:          estrat@cs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:
    Messanger.Models
--  Mappend.Policy
  
  build-depends:
    base,
    hails >= 0.1 && < 1.0
